--- a/Module2/Module2.ipynb
+++ b/Module2/Module2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "200"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "'application/json;charset=utf-8'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -49630,20 +49630,20 @@
        " ...]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resp_obj = resp.json()\n",
+    "resp_obj = resp.json() #Convert output to JSON\n",
     "\n",
     "resp_obj"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -50068,20 +50068,20 @@
        "[5100 rows x 51 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(resp_obj)\n",
+    "df = pd.DataFrame(resp_obj) #Convert JSON response to DataFrame\n",
     "\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -50506,7 +50506,7 @@
        "[5100 rows x 43 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50523,7 +50523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -50538,7 +50538,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50552,7 +50552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -51440,7 +51440,7 @@
        "  'EAST WEST HWY': 1}}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51461,7 +51461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -51591,7 +51591,7 @@
        "[5100 rows x 3 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51606,16 +51606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = nx.Graph()"
+    "g = nx.Graph() #Build the graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51625,7 +51625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -51644,16 +51644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx.write_graphml(g, \"mod2.graphml\")"
+    "nx.write_graphml(g, \"mod2.graphml\") #Export graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
