Updated code structure

--- a/Module3/Module3.ipynb
+++ b/Module3/Module3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 481,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "[8807 rows x 13 columns]"
       ]
      },
-     "execution_count": 464,
+     "execution_count": 481,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
     "count_matrix = cv.fit_transform(df['combined_features'])\n",
     "print(\"Count Matrix: \", count_matrix.toarray())\n",
     "\n",
-    "#Set  similarity metirc\n",
+    "#Set similarity metric\n",
     "cosine_sim = cosine_similarity(count_matrix)"
    ]
   },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "['Adam Sandler, Kevin James, Chris Rock, David Spade, Rob Schneider, Salma Hayek, Maria Bello, Maya Rudolph, Colin Quinn, Tim Meadows, Joyce Van Patten Dennis Dugan, PG-13, Comedies']"
       ]
      },
-     "execution_count": 467,
+     "execution_count": 484,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
        " ...]"
       ]
      },
-     "execution_count": 468,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1422,6 @@
     "#Get movie index\n",
     "def get_index_from(title): \n",
     "    return df[df['title'] == title]['index'].values[0]\n",
-    "\n",
     "\n",
     "movie_index = get_index_from(target_title)\n",
     "\n",
@@ -1434,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [
     {
@@ -2443,7 +2442,7 @@
        " ...]"
       ]
      },
-     "execution_count": 469,
+     "execution_count": 486,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2456,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2507,7 @@
        "['Grant Gustin, Candice Patton, Danielle Panabaker, Carlos Valdes, Tom Cavanagh, Jesse L. Martin, Neil Sandilands, Britne Oldford, Danielle Nicolet, Keiynan Lonsdale, Kim Engelbrecht Glen Winter, TV-14, Crime TV Shows, TV Action & Adventure, TV Sci-Fi & Fantasy']"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 488,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2523,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [
     {
@@ -3532,7 +3531,7 @@
        " ...]"
       ]
      },
-     "execution_count": 472,
+     "execution_count": 489,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3541,7 +3540,6 @@
     "#Get movie index\n",
     "def get_index_from(title): \n",
     "    return df[df['title'] == title]['index'].values[0]\n",
-    "\n",
     "\n",
     "movie_index = get_index_from(target_title)\n",
     "\n",
@@ -3553,7 +3551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [
     {
@@ -4562,7 +4560,7 @@
        " ...]"
       ]
      },
-     "execution_count": 473,
+     "execution_count": 490,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4575,7 +4573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [
     {
@@ -4618,7 +4616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 492,
    "metadata": {},
    "outputs": [
     {
@@ -4627,7 +4625,7 @@
        "['Patrick Wilson, Rose Byrne, Lin Shaye, Ty Simpkins, Barbara Hershey, Leigh Whannell, Angus Sampson, Andrew Astor, Joseph Bishara James Wan, PG-13, Horror Movies, Thrillers']"
       ]
      },
-     "execution_count": 475,
+     "execution_count": 492,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4642,7 +4640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 493,
    "metadata": {},
    "outputs": [
     {
@@ -5651,7 +5649,7 @@
        " ...]"
       ]
      },
-     "execution_count": 476,
+     "execution_count": 493,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5660,7 +5658,6 @@
     "#Get movie index\n",
     "def get_index_from(title): \n",
     "    return df[df['title'] == title]['index'].values[0]\n",
-    "\n",
     "\n",
     "movie_index = get_index_from(target_title)\n",
     "\n",
@@ -5672,7 +5669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 494,
    "metadata": {},
    "outputs": [
     {
@@ -6681,7 +6678,7 @@
        " ...]"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 494,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6694,7 +6691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 495,
    "metadata": {},
    "outputs": [
     {
